// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message 1`] = `
<Fragment>
  <h2>
    You have 
    0
     
    expenses
     totaling 
    $0.00
  </h2>
  <ul>
    <p>
      No expenses
    </p>
  </ul>
</Fragment>
`;

exports[`should render ExpenseList with expenses 1`] = `
<Fragment>
  <h2>
    You have 
    3
     
    expenses
     totaling 
    $0.00
  </h2>
  <ul>
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id={1}
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={500}
      createdAt={432000000}
      description="Rent"
      id={2}
      key="2"
      note="poo"
    />
    <ExpenseListItem
      amount={300}
      createdAt={864000000}
      description="Gum book"
      id={3}
      key="3"
      note=""
    />
  </ul>
</Fragment>
`;
